--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="script.js"></script>
   <title>Beer Review</title>
 </head>
-<body>
+<body style="margin-left: 20px">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <div class="page-header">
@@ -17,7 +17,7 @@
       <section class="beers">
         <h2>Beers</h2>
         <ul class="beers-list">
-          
+
         </ul>
       </section>
 
@@ -38,7 +38,7 @@
         </div>
         <button class="btn btn-primary post-beer" type="button">Post</button>
       </form>
-      
+
     </div>
   </div>
 
