pre-beer-rating changes to functions & objects

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
             placeholder="Category">
           </input>
         </div>
+        Beer Rating
+        <select name="Beer Rating"> Beer Rating
+          <option value = 1 >1</option>
+          <option value = 2 >2</option>
+          <option value = 3 >3</option>
+          <option value = 4 >4</option>
+          <option value = 5 >5</option>
+        </select><br/><br/>
         <button class="btn btn-primary post-beer" type="button">Post</button>
       </form>
 
