--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </input>
         </div>
         Beer Rating
-        <select name="Beer Rating"> Beer Rating
+        <select class="rating-input">
           <option value = 1 >1</option>
           <option value = 2 >2</option>
           <option value = 3 >3</option>
