--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <option value = 5 >5</option>
         </select><br/><br/>
         <button class="btn btn-primary post-beer" type="button">Post</button>
+        <button class="btn btn-primary sort-beer" type="button">Sort Beers</button>
       </form>
 
     </div>
