minute text alteration

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             placeholder="Category">
           </input>
         </div>
-        Beer Rating
+        Beer Rating:
         <select class="rating-input">
           <option value = 1 >1</option>
           <option value = 2 >2</option>
